added users and roles

--- a/ShapeUp/ShapeUp/appsettings.json
+++ b/ShapeUp/ShapeUp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost, 1434;Initial Catalog=ShapeUpDB; user=sa; Password=SqlServer2021"
+    "DefaultConnection": "Data Source=localhost, 1434;Initial Catalog=ShapeUpDB; user=sa; Password=SqlServer2021",
+    "MiralemovaConnection": "Data Source=localhost, 1433;Initial Catalog=ShapeUpDB; user=sa; Password=Lozinka123!"
   },
     "Logging": {
       "LogLevel": {
