--- a/ShapeUp/ShapeUp/ShapeUp.csproj
+++ b/ShapeUp/ShapeUp/ShapeUp.csproj
@@ -26,5 +26,9 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShapeUp.Model\ShapeUp.Model.csproj" />
+  </ItemGroup>
+
 
 </Project>
