added api auth, main form and first training get form

--- a/ShapeUp/ShapeUp/appsettings.json
+++ b/ShapeUp/ShapeUp/appsettings.json
@@ -3,12 +3,17 @@
     "DefaultConnection": "Data Source=localhost, 1434;Initial Catalog=ShapeUpDB; user=sa; Password=SqlServer2021",
     "MiralemovaConnection": "Data Source=localhost, 1433;Initial Catalog=ShapeUpDB; user=sa; Password=Lozinka123!"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "JwtSettings": {
+    "securityKey": "5h@p3Up53cR37K3y",
+    "validIssuer": "https://localhost:44341/",
+    "validAudience": "https://localhost:44341/"
+  },
     "AllowedHosts": "*"
   }
