--- a/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
+++ b/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
@@ -68,6 +68,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Training\frmAddTraining.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Training\frmAddTraining.Designer.cs">
+      <DependentUpon>frmAddTraining.cs</DependentUpon>
+    </Compile>
     <Compile Include="Training\frmShowTrainings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Training\frmAddTraining.resx">
+      <DependentUpon>frmAddTraining.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Training\frmShowTrainings.resx">
       <DependentUpon>frmShowTrainings.cs</DependentUpon>
     </EmbeddedResource>
