--- a/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
+++ b/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
@@ -68,11 +68,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Training\frmAddTraining.cs">
+    <Compile Include="Training\frmCRUDTraining.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Training\frmAddTraining.Designer.cs">
-      <DependentUpon>frmAddTraining.cs</DependentUpon>
+    <Compile Include="Training\frmCRUDTraining.Designer.cs">
+      <DependentUpon>frmCRUDTraining.cs</DependentUpon>
     </Compile>
     <Compile Include="Training\frmShowTrainings.cs">
       <SubType>Form</SubType>
@@ -96,8 +96,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Training\frmAddTraining.resx">
-      <DependentUpon>frmAddTraining.cs</DependentUpon>
+    <EmbeddedResource Include="Training\frmCRUDTraining.resx">
+      <DependentUpon>frmCRUDTraining.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Training\frmShowTrainings.resx">
       <DependentUpon>frmShowTrainings.cs</DependentUpon>
@@ -115,7 +115,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
@@ -124,6 +123,9 @@
       <Project>{a5f50b9b-5aaf-4be0-a315-975a5503ff13}</Project>
       <Name>ShapeUp.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upload.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
