--- a/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
+++ b/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ImageHelper.cs" />
+    <Compile Include="Helpers\MBoxHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
