--- a/ShapeUp/ShapeUp.Desktop/packages.config
+++ b/ShapeUp/ShapeUp.Desktop/packages.config
@@ -2,5 +2,10 @@
 <packages>
   <package id="Flurl" version="3.0.2" targetFramework="net472" />
   <package id="Flurl.Http" version="3.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Stripe.net" version="39.89.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
 </packages>
