--- a/ShapeUp/ShapeUp.Model/ShapeUp.Model.csproj
+++ b/ShapeUp/ShapeUp.Model/ShapeUp.Model.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Stripe.net" Version="39.89.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
