--- a/ShapeUp/ShapeUp.Desktop/packages.config
+++ b/ShapeUp/ShapeUp.Desktop/packages.config
@@ -34,6 +34,8 @@
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1484.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Stripe.net" version="39.89.0" targetFramework="net472" />
