--- a/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
+++ b/ShapeUp/ShapeUp.Desktop/ShapeUp.Desktop.csproj
@@ -328,6 +328,12 @@
     <Compile Include="Uplata\frmShowUplate.Designer.cs">
       <DependentUpon>frmShowUplate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Users\frmDodajKlijenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Users\frmDodajKlijenta.Designer.cs">
+      <DependentUpon>frmDodajKlijenta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users\frmKlijent.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -398,6 +404,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Uplata\frmShowUplate.resx">
       <DependentUpon>frmShowUplate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Users\frmDodajKlijenta.resx">
+      <DependentUpon>frmDodajKlijenta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Users\frmKlijent.resx">
       <DependentUpon>frmKlijent.cs</DependentUpon>
