--- a/ShapeUp/ShapeUp/appsettings.json
+++ b/ShapeUp/ShapeUp/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=., 1434;Initial Catalog=ShapeUpDB; user=sa; Password=SqlServer2021",
-    "MiralemovaConnection": "Data Source=host.docker.internal, 1433;Initial Catalog=ShapeUpDB; user=sa; Password=Lozinka123!"
+    "DefaultConnection": "Data Source=., 1433;Initial Catalog=180010; user=sa; Password=Lozinka123!"
   },
   "Logging": {
     "LogLevel": {
