fixed issue with users passwords

--- a/ShapeUp/ShapeUp.Desktop/app.config
+++ b/ShapeUp/ShapeUp.Desktop/app.config
@@ -9,7 +9,7 @@
     <applicationSettings>
         <ShapeUp.Desktop.Properties.Settings>
             <setting name="ApiURL" serializeAs="String">
-                <value>https://localhost:44341/api</value>
+                <value>http://localhost:8010/api</value>
             </setting>
         </ShapeUp.Desktop.Properties.Settings>
     </applicationSettings>
