--- a/ShapeUp/ShapeUp/appsettings.json
+++ b/ShapeUp/ShapeUp/appsettings.json
@@ -11,8 +11,8 @@
   },
   "JwtSettings": {
     "securityKey": "5h@p3Up53cR37K3y",
-    "validIssuer": "https://localhost:44341/",
-    "validAudience": "https://localhost:44341/"
+    "validIssuer": "http://localhost:8010/",
+    "validAudience": "http://localhost:8010/"
   },
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
