--- a/ShapeUp/ShapeUp.Desktop/Properties/Settings.settings
+++ b/ShapeUp/ShapeUp.Desktop/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ApiURL" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://localhost:44341/api</Value>
+      <Value Profile="(Default)">http://localhost:8010/api</Value>
     </Setting>
   </Settings>
 </SettingsFile>
